Fix Bug 362650 - an extra space character in attached file names the UTF-8 encoded

BUG: 362650
FIXED-IN: 5.14.2